WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72638
CSS 2.1 failure: empty-inline-003.htm fails
https://bugs.webkit.org/show_bug.cgi?id=72638
Summary
CSS 2.1 failure: empty-inline-003.htm fails
Robert Hogan
Reported
2011-11-17 11:59:35 PST
Empty inline elements need to share their inline height with siblings
Attachments
Patch
(23.53 KB, patch)
2011-11-17 12:24 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(42.45 KB, patch)
2011-11-20 09:39 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(42.20 KB, patch)
2011-11-21 11:19 PST
,
Robert Hogan
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-11-17 12:24:48 PST
Created
attachment 115656
[details]
Patch
Ryosuke Niwa
Comment 2
2011-11-17 14:10:45 PST
Comment on
attachment 115656
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=115656&action=review
> Source/WebCore/ChangeLog:10 > + going to affect the line-height.
Don't think we normally indent the comment like this.
Robert Hogan
Comment 3
2011-11-20 09:39:24 PST
Created
attachment 115984
[details]
Patch
WebKit Review Bot
Comment 4
2011-11-20 10:17:39 PST
Comment on
attachment 115984
[details]
Patch
Attachment 115984
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10342078
New failing tests: platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html
Ryosuke Niwa
Comment 5
2011-11-21 10:52:42 PST
Comment on
attachment 115984
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=115984&action=review
Per IRC discussion, some of these tests are modified from CSS2.1 test suite so they should be added to fast/css.
> Source/WebCore/ChangeLog:8 > + Reviewed by NOBODY (OOPS!).
This line should appear before the description.
Robert Hogan
Comment 6
2011-11-21 11:19:55 PST
Created
attachment 116109
[details]
Patch
Ryosuke Niwa
Comment 7
2011-11-21 12:02:39 PST
Comment on
attachment 116109
[details]
Patch Looks sane to me. You may consider using Ahem for fast/css tests.
Robert Hogan
Comment 8
2011-11-21 13:06:56 PST
Committed
r100949
: <
http://trac.webkit.org/changeset/100949
>
Alexey Proskuryakov
Comment 9
2012-02-10 21:35:17 PST
This has caused a regression,
bug 78379
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug