CSS 2.1 failure: empty-inline-003.htm fails https://bugs.webkit.org/show_bug.cgi?id=72638

Reviewed by Ryosuke Niwa.

Source/WebCore:

Empty inline elements need to share their inline height with siblings.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::inlineFlowRequiresLineBox): In strict mode, add a LineBox for an empty element if it is
going to affect the line-height.
(WebCore::requiresLineBox): Pass LineInfo to inlineFlowRequiresLineBox
(WebCore::RenderBlock::LineBreaker::nextLineBreak): Pass LineInfo to inlineFlowRequiresLineBox

LayoutTests:

* css2.1/20110323/empty-inline-001.htm: Added.
* css2.1/20110323/empty-inline-002.htm: Added.
* css2.1/20110323/empty-inline-003.htm: Added.
* fast/css/empty-inline-003-quirksmode-expected.png: Result can
  cover all platforms as there is no text apart from the period.
* fast/css/empty-inline-003-quirksmode-expected.txt: ditto
* fast/css/empty-inline-003-quirksmode.htm: empty-inline-003.htm should only pass in
  strict mode, this ensures it 'fails' in quirks mode.
* fast/css/empty-inline-line-height-first-line-expected.png: Added.
* fast/css/empty-inline-line-height-first-line-expected.txt: Added.
* fast/css/empty-inline-line-height-first-line-quirksmode-expected.png: Added.
* fast/css/empty-inline-line-height-first-line-quirksmode-expected.txt: Result can
  cover all platforms as there is no text apart from the period.
* fast/css/empty-inline-line-height-first-line-quirksmode.htm: Like
  empty-inline-003.htm, empty-inline-line-height-first-line.htm should also fail in quirks mode.
* fast/css/empty-inline-line-height-first-line.htm: Like empty-inline-003.htm but
  ensures first-line style is respected for line-height in empty elements.
* platform/chromium/css2.1/20110323/empty-inline-001-expected.png: Added.
* platform/chromium/css2.1/20110323/empty-inline-001-expected.txt: Added.
* platform/chromium/css2.1/20110323/empty-inline-002-expected.png: Added.
* platform/chromium/css2.1/20110323/empty-inline-002-expected.txt: Added.
* platform/chromium/css2.1/20110323/empty-inline-003-expected.png: Added.
* platform/chromium/css2.1/20110323/empty-inline-003-expected.txt: Added.

Canonical link: https://commits.webkit.org/89438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100949 268f45cc-cd09-0410-ab3c-d52691b4dbfc